--- a/meta_analysis/meta_analysis_with_R.Rmd
+++ b/meta_analysis/meta_analysis_with_R.Rmd
@@ -80,3 +80,74 @@ print(metacont(Ne, Me, Se, Nc, Mc, Sc, sm="SMD",
                data=data2, subset=1), digits=2)
 ```
 
+### **1.2 Fixed Effect Model**  
+The fixed effect model is  
+$\hat \theta_k = \theta + \sigma_k \epsilon_k$, $\epsilon_k ~ N(0,1)$  
+Fix effect estimate :  
+$\hat \theta_k = \frac {\displaystyle \sum^{K}_{k=1} \hat \theta_k / \sigma_k^2}{\displaystyle \sum^{K}_{k=1} 1 / \sigma_k^2} = \frac {\displaystyle \sum^{K}_{k=1} \hat \theta_k w_k}{\displaystyle \sum^{K}_{k=1} w_k}$  
+The variance of $\hat \theta_F$ is estimated by:  
+$Var(\hat \theta_F) = \frac {1}{\sum^{K}_{k=1} w_k}$  
+$(1 - \alpha)$ confidence interval for $\hat \theta_F$:
+$\hat \theta_F \pm Z_{1 - \frac {\alpha}{2}} S.E.(\hat \theta_F)$  
+
+The fixed effect estimate $\hat \theta_F$ and its variance can be calculated  
+using the following quantities:  
+$\hat \theta_k = \hat \mu_k$  
+$\sigma_k^2 = Var(\hat \mu_k)$  
+
+```{r}
+# 1. Calculate mean difference, variance and weights
+MD <- with(data1, Me - Mc)
+varMD <- with(data1, Se^2/Ne + Sc^2/Nc)
+weight <- 1/varMD
+# 2. Calculate the inverse variance estimator
+round(weighted.mean(MD, weight), 4)
+# 3. Calculate the variance
+round(1/sum(weight), 4)
+
+# Calculate with metaR
+mc1 <- metacont(Ne, Me, Se, Nc, Mc, Sc,
+                data=data1,
+                studlab=paste(author, year))
+round(c(mc1$TE.fixed, mc1$seTE.fixed^2), 4)
+print(mc1, digits=1)
+
+# The weight of study
+mc1$w.fixed[1]
+sum(mc1$w.fixed)
+round(100*mc1$w.fixed[1] / sum(mc1$w.fixed), 2)
+
+forest(mc1, comb.random=FALSE, xlab=
+       "Difference in mean response (intervention - control)
+units: maximum % fall in FEV1",
+       xlim=c(-50,10), xlab.pos=-20, smlab.pos=-20)
+
+# 1. Apply generic inverse variance method
+mc1.gen <- metagen(mc1$TE, mc1$seTE, sm="MD")
+# 2. Same result
+mc1.gen <- metagen(TE, seTE, data=mc1, sm="MD")
+# 3. Print results for fixed effect and random effects method
+c(mc1$TE.fixed, mc1$TE.random)
+c(mc1.gen$TE.fixed, mc1.gen$TE.random)
+
+# 1. Calculate standardised mean difference,
+#    variance and weights
+N <- with(data2, Ne + Nc)
+SMD <- with(data2,
+            (1 - 3/(4 * N - 9)) * (Me - Mc)/
+            sqrt(((Ne - 1) * Se^2 + (Nc - 1) * Sc^2)/(N - 2)))
+varSMD <- with(data2,
+               N/(Ne * Nc) + SMD^2/(2 * (N - 3.94)))
+weight <- 1/varSMD
+# 2. Calculate the inverse variance estimator
+round(weighted.mean(SMD, weight), 4)
+# 3. Calculate the variance
+round(1/sum(weight), 4)
+
+mc2 <- metacont(Ne, Me, Se, Nc, Mc, Sc, sm="SMD",
+                data=data2)
+round(c(mc2$TE.fixed, mc2$seTE.fixed^2), 4)
+
+print(summary(mc2), digits=2)
+```
+
